Fixes the card uneven size

--- a/src/components/search-result/searchResultStyle.css
+++ b/src/components/search-result/searchResultStyle.css
@@ -90,7 +90,6 @@
   background-color: #68d391;
   text-align: center;
   width: 200px;
-  height: fit-content;
   margin: 0 2px;
   padding: 1rem;
   border-radius: 0.25rem;
